# assistant-tools

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml
assistant_tools/: __init__.py  __main__.py  cli.py  config.py  http.py  models.py  tts.py  utils.py  video.py
assistant_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
assistant_tools/providers/: __init__.py  deepinfra.py  groq.py  parallel.py  supadata.py
assistant_tools/tg/: __init__.py  client.py  commands.py  config.py  normalize.py
tests/: test_cli_packaging.py  test_tg_wait_next_updates.py  test_tts_config_compat.py  test_tts_runtime_compat.py  test_tts_stdout_suppression.py
