[project]
name = "assistant-tools"
version = "0.1.0"
description = "JSON-only CLI toolbox for search, extract, speech-to-text, and video-to-text"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptg>=0.5.2",
  "httpx>=0.28.1",
  "kittentts @ git+https://github.com/KittenML/KittenTTS@395171a68d5c73a50027436988fb856c30c748b8",
  "python-socks[asyncio]>=2.8.1",
  "soundfile>=0.13.1",
  "socksio>=1.0.0",
  "telethon>=1.43.0",
]

[project.scripts]
assistant-tools = "assistant_tools.cli:main"
kit = "assistant_tools.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pyright>=1.1.405",
  "ruff>=0.11.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
typeCheckingMode = "strict"
include = ["assistant_tools"]
